[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/buildings/spawner.png" type="Texture" id=1]
[ext_resource path="res://src/Buildings/Spawner.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 2 )

[node name="Spawner" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AreaTo" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTo"]
position = Vector2( 0, -19 )
shape = SubResource( 2 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="AreaTo" to="." method="_on_AreaTo_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
